feat: 完成 GPU 訓練設置與所有修復及模型檢查點
- 修復 CentralityLoader、CumulativeTrainer、Model 中的 NumPy 2.x 相容性問題
- 將 np.random 替換為 torch.rand 以支援 GPU
- 添加 strict=False 模型載入以處理社區嵌入維度不匹配
- 修改 split_data 在測試集為空時使用訓練資料進行評估
- 包含已訓練的模型檢查點（epoch 0、1）[Git LFS]
- 包含訓練日誌與評估指標
- 新增命令行操作指南文檔

--- a/.gitignore
+++ b/.gitignore
@@ -26,14 +26,14 @@ env/
 .venv/
 ENV/
 
-# PyTorch 模型檔案
-*.pkl
-*.pt
-*.pth
-*.bin
+# PyTorch 模型檔案 (已临时取消以提交模型)
+# *.pkl
+# *.pt
+# *.pth
+# *.bin
 
-# 日誌與暫存檔案
-*.log
+# 日誌與暫存檔案 (已临时取消以提交日志)
+# *.log
 *.tmp
 *.cache
 
